Fix styles overlaping

--- a/src/client/components/MenuAccount/MenuAccount.less
+++ b/src/client/components/MenuAccount/MenuAccount.less
@@ -39,14 +39,14 @@
 
 .oc-menu-account__action-button {
   // XXX @opuscapita/react-buttons-fix
-  text-transform: none;
-  font-size: 14px;
-  font-weight: normal;
-  position: relative;
-  padding: 4px 8px;
+  text-transform: none !important;
+  font-size: 14px !important;
+  font-weight: normal !important;
+  position: relative !important;
+  padding: 4px 8px !important;
 
   &:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
   }
 }
 
